--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </div>
 
    <div id="showTimer">
-    15:00
+    15 : 00
     <!-- <ul>
       <li><span id="countdownMins"></span>mins</li>
       <li><span id="countdownSeconds"></span>seconds</li>
@@ -34,7 +34,7 @@
     <ul>
       <li>
         <div>
-          <span class="recordMins">12</span>
+          <span id="recordMins">12</span>
           *
           <span class="times">回数</span>
           回
