added showing records

--- a/index.html
+++ b/index.html
@@ -34,15 +34,12 @@
     <ul>
       <li>
         <div>
-          <span id="recordMins">12</span>
-          *
-          <span class="times">回数</span>
-          回
-          <span class="totalMins">トータル時間</span>
-          mins
+          <span id="times"></span>
+          <span id="recordMins"></span>
+          <span id="totalMins"></span>
         </div>
       </li>
-      <li>
+      <!-- <li>
         <div>
           <span class="recordMins">12</span>
           *
@@ -61,9 +58,9 @@
           <span class="totalMins">トータル時間</span>
           mins
         </div>
-      </li>
+      </li> -->
     </ul>
-    <div>TOTAL<span>total mins</span>mins</div>
+    <!-- <div>TOTAL<span>total mins</span>mins</div> -->
    </div>
 
    <script src="index.js"></script>
